# candor-ai

./: .clippy.toml  .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .rustfmt.toml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  ISA.md  LICENSE  Makefile  README.md  SECURITY.md  SYSTEM.md  candor-ai-design.md  candor-ai.rb  candor.toml  install.sh
.cargo/: audit.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md
.github/workflows/: ci.yml  release.yml
crates/candor-cognitive/: Cargo.toml
crates/candor-cognitive/src/: backends.rs  embedding.rs  engine.rs  lib.rs  local.rs  real_embed.rs
crates/candor-cognitive/tests/: phase1_pulse_daemon.rs
crates/candor-core/: Cargo.toml
crates/candor-core/benches/: state.rs
crates/candor-core/src/: error.rs  ideal.rs  lib.rs  protocol.rs  state.rs
crates/candor-core/tests/: comprehensive.rs  integration.rs
crates/candor-graph/: Cargo.toml
crates/candor-graph/src/: checkpoint.rs  full_hooks.rs  hooks.rs  lib.rs  node.rs  recovery.rs  runner.rs
crates/candor-graph/tests/: hooks_integration.rs  phase3_orchestration.rs
crates/candor-mcp/: Cargo.toml
crates/candor-mcp/src/: bridge.rs  client.rs  lib.rs  transport.rs
crates/candor-mcp/tests/: integration.rs
crates/candor-memory/: Cargo.toml
crates/candor-memory/src/: lib.rs  schema.rs  store.rs
crates/candor-memory/tests/: phase4_compaction.rs
crates/candor-orchestrator/: Cargo.toml
crates/candor-orchestrator/src/: approval_gate.rs  engine.rs  isa_parser.rs  lib.rs  markdown_router.rs  memory_nudge.rs  phases.rs  pipeline.rs  skills.rs  trajectory.rs
crates/candor-orchestrator/src/engine/: mod.rs  phase_impls.rs  phases.rs  verification.rs  writer.rs
crates/candor-orchestrator/tests/: phase6_trajectory.rs  swe_level_tests.rs
crates/candor-sandbox/: Cargo.toml
crates/candor-sandbox/src/: cross_platform.rs  lib.rs  policy.rs  process_exec.rs  unified.rs  wasm_exec.rs
crates/candor-sandbox/tests/: integration.rs  phase2_isolation.rs
crates/candor-sentinel/: Cargo.toml
crates/candor-sentinel/src/: ast_checker.rs  doctrine.rs  interceptor.rs  lib.rs  rules.rs  slop_detector.rs
crates/candor-sentinel/tests/: interceptor_tests.rs  phase5_sentinel.rs
crates/candor-telemetry/src/: lib.rs
crates/candor-tools/: Cargo.toml
crates/candor-tools/src/: fs_tools.rs  git_tools.rs  lib.rs  registry.rs  search_tools.rs  shell_tools.rs  test_tools.rs
crates/candor-tools/tests/: edge_cases.rs  git_tests.rs
desktop/: index.html  package-lock.json  package.json
desktop/src/: App.css  App.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
