[workspace]
resolver = "2"
members = [
    "crates/candor-core",
    "crates/candor-graph",
    "crates/candor-sandbox",
    "crates/candor-cognitive",
    "crates/candor-memory",
    "crates/candor-sentinel",
    "crates/candor-orchestrator",
    "crates/candor-tools",
    "crates/candor-mcp",
    "bin/candor-daemon",
]

[workspace.package]
version = "1.0.0"
edition = "2024"
authors = ["Candor AI"]
license = "MIT"
repository = "https://github.com/iknowkungfubar/candor-ai"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Graph
petgraph = "0.7"

# Error handling
thiserror = "2"
anyhow = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging and telemetry
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.30"
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }

# Async traits
async-trait = "0.1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Sandbox / WASM
wasmtime = "30"
cap-std = "3"
wasmtime-wasi = "30"

# HTTP server
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Config
toml = "0.8"
figment = { version = "0.10", features = ["toml", "env"] }

# Database
surrealdb = { version = "2", features = ["kv-mem"] }

# Embeddings / AI
ndarray = "0.16"
tokenizers = "0.21"

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# Testing
rstest = "0.24"
tempfile = "3"

# Metrics
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
