[workspace]
resolver = "2"
members = [
    "crates/candor-core",
    "crates/candor-graph",
    "crates/candor-sandbox",
    "crates/candor-cognitive",
    "crates/candor-memory",
    "crates/candor-sentinel",
    "crates/candor-orchestrator",
    "crates/candor-tools",
    "crates/candor-mcp",
    "crates/candor-telemetry",
    "bin/candor-ai",
]

[workspace.package]
version = "1.0.0"
edition = "2024"
rust-version = "1.85"
authors = ["Candor AI <candor@nousresearch.com>"]
license = "MIT"
repository = "https://github.com/TurinTech-Solutions/candor-ai"
homepage = "https://github.com/TurinTech-Solutions/candor-ai"
documentation = "https://docs.rs/candor-ai"
description = "Lawful Good Rust Agentic Operating System — 7-phase agent with voice, PDA, memory"
readme = "README.md"
keywords = ["agent", "ai", "llm", "automation", "pda"]
categories = ["command-line-utilities", "development-tools", "artificial-intelligence"]

[workspace.dependencies]
# Internal crates — path for local dev, version for crates.io
candor-core = { path = "crates/candor-core", version = "1.0" }
candor-graph = { path = "crates/candor-graph", version = "1.0" }
candor-sandbox = { path = "crates/candor-sandbox", version = "1.0" }
candor-cognitive = { path = "crates/candor-cognitive", version = "1.0" }
candor-memory = { path = "crates/candor-memory", version = "1.0" }
candor-sentinel = { path = "crates/candor-sentinel", version = "1.0" }
candor-orchestrator = { path = "crates/candor-orchestrator", version = "1.0" }
candor-tools = { path = "crates/candor-tools", version = "1.0" }
candor-mcp = { path = "crates/candor-mcp", version = "1.0" }
candor-telemetry = { path = "crates/candor-telemetry", version = "1.0" }

# Async runtime — trimmed to features actually used
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync", "time", "net", "process", "fs", "io-util", "signal"] }

# Graph
petgraph = "0.8"

# Error handling
thiserror = "2"
anyhow = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging and telemetry
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.30"
opentelemetry = "0.29"
opentelemetry_sdk = { version = "0.32", features = ["rt-tokio"] }
opentelemetry-otlp = "0.29"

# Async traits
async-trait = "0.1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Sandbox / WASM
wasmtime = { version = ">=36.0.8", features = ["async"] }
cap-std = "4"

# Transitive dependency pins (dependabot security)
# These force minimum versions for security fixes in indirect deps
jsonwebtoken = ">=10.3.0"
lru = ">=0.16.3"

# HTTP server
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.7", features = ["cors", "trace"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Database
surrealdb = { version = "3", features = ["kv-mem"] }

# Local inference
mistralrs = { version = "0.7" }

# Configuration
figment = { version = "0.10", features = ["toml", "env"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# Testing
tempfile = "3"

# Benchmarking
criterion = { version = "0.8", features = ["html_reports"] }

[profile.dev]
opt-level = 1
debug = 0

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
