[package]
name = "candor-cognitive"
version.workspace = true
edition.workspace = true

[dependencies]
candor-core = { path = "../candor-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
ndarray = { workspace = true }
tokenizers = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
