[package]
name = "candor-graph"
version.workspace = true
edition.workspace = true

[dependencies]
candor-core = { path = "../candor-core" }
petgraph = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
tempfile = { workspace = true }
