[package]
name = "candor-graph"
version.workspace = true
edition.workspace = true
description = "Petgraph-based GraphRunner with 17 lifecycle hooks and recovery nodes"
license.workspace = true
repository.workspace = true

[dependencies]
candor-core = { workspace = true }
petgraph = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
