[package]
name = "candor-mcp"
version.workspace = true
edition.workspace = true

[dependencies]
candor-core = { path = "../candor-core" }
candor-tools = { path = "../candor-tools" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
uuid = { workspace = true }
