[package]
name = "candor-mcp"
version.workspace = true
edition.workspace = true

[dependencies]
candor-core = { workspace = true }
candor-tools = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
uuid = { workspace = true }
