[package]
name = "candor-orchestrator"
version.workspace = true
edition.workspace = true

[dependencies]
candor-core = { workspace = true }
candor-tools = { workspace = true }
candor-graph = { workspace = true }
candor-sandbox = { workspace = true }
candor-cognitive = { workspace = true }
candor-memory = { workspace = true }
candor-sentinel = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
petgraph = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
surrealdb = { workspace = true, features = ["kv-mem"] }
