[package]
name = "candor-sandbox"
version.workspace = true
edition.workspace = true

[dependencies]
candor-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tempfile = { workspace = true }
uuid = { workspace = true }

# WASM runtime
wasmtime = { workspace = true }
cap-std = { workspace = true }
