[package]
name = "candor-sentinel"
version.workspace = true
edition.workspace = true

[dependencies]
candor-core = { workspace = true }
candor-cognitive = { workspace = true }
candor-graph = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
regex = "1"
async-trait = { workspace = true }
