[package]
name = "candor-tools"
version.workspace = true
edition.workspace = true

[dependencies]
candor-core = { workspace = true }
candor-sandbox = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
regex = "1"
uuid = { workspace = true }
chrono = { workspace = true }
